<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">



<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="18dp"
    app:layout_scrollFlags="scroll"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#5096D4"
        android:padding="10dp"
        android:text="@string/titulo"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/campoKmInicial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#E60738CC"
        android:ems="10"
        android:hint="@string/kminicial"
        android:inputType="number|numberDecimal"
        android:padding="20dp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/campoKmFinal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#E60738CC"
        android:ems="10"
        android:hint="@string/kmfinal"
        android:inputType="number|numberDecimal"
        android:padding="20dp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/campoCapacidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#E60738CC"
        android:ems="10"
        android:hint="@string/capacid"
        android:inputType="number|numberDecimal"
        android:padding="20dp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/campoConsumido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#E60738CC"
        android:ems="10"
        android:hint="@string/consumido"
        android:inputType="number|numberDecimal"
        android:padding="20dp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/campoDeslocamento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/desloc"
        android:textColor="#11BFAF"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/campoConsumidoResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/consumidoR"
        android:textColor="#11BFAF"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/campoAuto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/auto"
        android:textColor="#11BFAF"
        android:textSize="16sp" />

    <Button
        android:id="@+id/buttonCalcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#2F92E8"
        android:onClick="Calcular"
        android:text="@string/calculate"
        android:textSize="16sp" />
</LinearLayout>
</androidx.core.widget.NestedScrollView>